Post v24.03.0
-------------

OVN v24.03.0 - xx xxx xxxx
--------------------------
  - DNS now have an "options" column for configuration of extra options.
  - A new DNS option "ovn-owned" has been added to allow defining domains
    that are owned only by ovn, queries for that domain will not be processed
    externally.
  - Disable OpenFlow inactivity probing between ovn-controller and OVS.
    OF connection is established over unix socket, which is a reliable
    connection method and doesn't require additional probing.
    external_ids:ovn-openflow-probe-interval configuration option for
    ovn-controller no longer matters and is ignored.
  - Support CIDR based MAC binding aging threshold. See ovn-nb(5) for
    'mac_binding_age_threshold' for more details.
  - ovn-northd-ddlog has been removed.
  - A new LSP option "enable_router_port_acl" has been added to enable
    conntrack for the router port whose peer is l3dgw_port if set it true.
  - Enable PMTU discovery on geneve/vxlan tunnels for E/W traffic.
  - Support selecting encapsulation IP based on the source/destination VIF's
    settting. See ovn-controller(8) 'external_ids:ovn-encap-ip' for more
    details.
  - Introduce next-hop BFD availability check for OVN reroute policies.
  - Add the capability to mark (through pkt.mark) incoming/outgoing packets
    in the logical switch datapath according to user configured QoS rule.

OVN v23.09.0 - 15 Sep 2023
--------------------------
  - Added FDB aging mechanism, that is disabled by default.
    It can be enabled per logical switch with other_config
    "fdb_age_threshold".
  - Add DHCPv6 "fqdn" (39) option, that works similarly to
    DHCPv4 "hostname" (12) option.
  - Support to create/update MAC_Binding when GARP received from VTEP (RAMP)
    switch on l3dgw port.
  - To allow optimizing ovn-controller's monitor conditions for the regular
    VIF case, ovn-controller now unconditionally monitors all sub-ports
    (ports with parent_port set).