@@ -1,5 +1,10 @@
 Post v24.03.0
 -------------
+  - Add ovn-debug tool containing two commands.
+    "lflow-stage-to-ltable STAGE_NAME" that converts stage name into logical
+    flow table id.
+    "lflow-stage-to-oftable STAGE_NAME" that converts stage name into OpenFlow
+    table id.
 
 OVN v24.03.0 - xx xxx xxxx
 --------------------------
